# bmstu-3sem-cg-v1

./: .gitignore  CMakeLists.txt  conanfile.txt  load.sh  main.cpp
objects/: 1.main.cpp
